<resources>
    <string name="app_name">CashManager</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_profile">Profile</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid email address</string>
    <string name="invalid_password">Password must be at least 4 characters long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="instruction">Enter your username and password</string>
    <string name="instruction_profile">Then select a profile</string>
    <string name="login_success">Welcome back!</string>
    <string-array name="profiles">
        <item>Administrator</item>
        <item>Customer</item>
        <item>Supplier</item>
    </string-array>

    <!-- Shared -->
    <string name="cash_manager">Cash Manager</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="reset">Reset</string>
    <string name="bill_total">Bill total: %1$s</string>
    <string name="payment_mode_label">Payment mode:</string>
    <string name="payment_mode_cheque">QRcode cheque</string>
    <string name="payment_mode_nfc">NFC card</string>
    <string name="full_price">%1$s x %2$d = %3$s</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Do you want to log out of the application?</string>

    <!-- Connection status -->
    <string name="status_connected">Connected</string>
    <string name="status_attempting_connection">Attempting connection…</string>
    <string name="status_disconnected">Connection failed</string>
    <string name="api_call_failed">Failed to reach server</string>

    <!-- Register Activity -->
    <string name="register_title">Register to CashManager</string>
    <string name="username">Username*</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password*</string>
    <string name="repeat_password">Repeat password*</string>
    <string name="create_user">Create</string>
    <string name="error_no_username">An username is required</string>
    <string name="error_already_username">Please choose another username</string>
    <string name="error_no_password">Enter a password in both fields</string>
    <string name="error_repeat_password">Passwords do not matches</string>
    <string name="account_created">Account created</string>
    <string name="username_unavailable">Failed to create account</string>

    <!-- Cash register activity -->
    <string name="cash_register_activity_title">Cash register</string>
    <string name="cart">Your cart</string>
    <string name="no_article_warning">No article in cart</string>
    <string name="add_article_btn">Add articles</string>
    <string name="total">Total: %s</string>
    <string name="cart_reset_toast">Cart cleared</string>
    <string name="cart_empty">Add an item to your cart to proceed!</string>

    <!-- Product picker activity -->
    <string name="product_picker_activity_title">Available products</string>
    <string name="add_to_cart_btn">Add to cart</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="invalid_barcode">Invalid barcode</string>
    <string name="product_not_found">Product not found</string>
    <string name="added_product">Added %1$s</string>
    <string name="cart_saving_failed">Could not save your cart online</string>
    <string name="api_unavailable">API unavailable, please try again</string>


    <!-- Bill total activity-->
    <string name="bill_activity_title">Total Bill</string>
    <string name="cart_products">Products in your cart: </string>
    <string name="order_created">Order saved online</string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <!-- Payment activity-->
    <string name="nfc_payment">NFC payment</string>
    <string name="nfc_not_supported">NFC is not supported on this device, go back and change your payment method</string>
    <string name="nfc_not_enable">Please enable NFC in your device settings to proceed. Then press the Scan NFC button.</string>
    <string name="payment_activity_title">Payment</string>
    <string name="status">Status:</string>
    <string name="pending_payment">Awaiting payment</string>
    <string name="pending_authorization">Pending authorization</string>
    <string name="cheque_authorized">Cheque authorized</string>
    <string name="cheque_refused">Cheque refused</string>
    <string name="cheque_unreadable">Failed to extract data from QRcode</string>
    <string name="cheque_invalid_value">Cheque has wrong value: %s</string>
    <string name="scan_failed">Scanning failed</string>
    <string name="back_to_register_btn">Back to register</string>
    <string name="cancel_op_btn">Cancel operation</string>
    <string name="card_accepted">Card payment accepted</string>
    <string name="card_refused">Card payment refused</string>
    <string name="scan_cheque_btn">Scan cheque</string>
    <string name="scan_card_btn">Scan card</string>
    <string name="api_connection_failed">Failed to connect to server</string>
    <string name="NFC_available">NFC is available. Approach your card to the device.</string>

</resources>
